--- a/app/src/main/res/layout/fragment_place_detail.xml
+++ b/app/src/main/res/layout/fragment_place_detail.xml
@@ -78,7 +78,7 @@
                     android:layout_margin="4dp"
                     android:src="@drawable/ic_phone" />
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/place_phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
