--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF6E40</color>
-    <color name="colorPrimaryDark">#DD2C00</color>
-    <color name="colorAccent">#00B0FF</color>
+    <color name="colorPrimary">#FF5722</color>
+    <color name="colorPrimaryDark">#BF360C</color>
+    <color name="colorAccent">#FF9800</color>
     <color name="colorGrey200">#EEEEEE</color>
     <color name="colorGrey700">#616161</color>
     <color name="colorWhite">#FAFAFA</color>
